// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu show={false} /> 1`] = `
"<section class=\\"menu\\">
  <div class=\\"menu-backdrop\\">
    <div class=\\"menu-box\\">
      <article class=\\"menu-item\\">
        <p>foo</p><svg>icon</svg>
      </article>
      <article class=\\"menu-item\\">
        <p>bar</p>
        <p>icon</p>
      </article>
    </div>
  </div>
</section>"
`;

exports[`<Menu show={true} /> 1`] = `
"<section class=\\"menu show\\">
  <div class=\\"menu-backdrop\\">
    <div class=\\"menu-box\\">
      <article class=\\"menu-item\\">
        <p>foo</p><svg>icon</svg>
      </article>
      <article class=\\"menu-item\\">
        <p>bar</p>
        <p>icon</p>
      </article>
    </div>
  </div>
</section>"
`;
